# AstraQuant

./: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
scripts/: tradingview-chart.cjs
src/: main.tsx  routeTree.gen.ts
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs  window.rs
src-tauri/src/market_data/: asset_catalog.rs  catalog.rs  mod.rs  models.rs  resolve.rs  service.rs
src/components/: icons.tsx  language-switcher.tsx  theme-toggle.tsx  window-titlebar.tsx
src/components/markets/: detail-page.tsx  market-price-chart.tsx  overview-page.tsx  sidebar.tsx  table-skeleton.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  direction.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  item.tsx  menubar.tsx  native-select.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  (+9 more)
src/dashboard/components/: date-range-picker.tsx
src/lib/: i18n.tsx  market-data.ts
src/routes/: __root.tsx  crypto.tsx  etf.tsx  futures.tsx  index.tsx  stocks.tsx
